crates/reinhardt-core/crates/macros/tests/ui/fail/empty_label.stderr
error: expected identifier
 --> tests/ui/fail/empty_label.rs:8:9
  |
8 |         : "reinhardt.contrib.auth",
  |         ^
